Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9994

Aria service threads are not "joined"

    XMLWordPrintable

Details

    • 5.5.50

    Description

      Aria service threads are created "joinable", but they're not "joined" on completion. This causes memory leaks like:

      ==11547== 608 bytes in 1 blocks are possibly lost in loss record 9 of 10
      ==11547==    at 0x4C2DCB5: calloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
      ==11547==    by 0x4013504: allocate_dtv (dl-tls.c:322)
      ==11547==    by 0x4013504: _dl_allocate_tls (dl-tls.c:544)
      ==11547==    by 0x5C6E0D2: allocate_stack (allocatestack.c:588)
      ==11547==    by 0x5C6E0D2: pthread_create@@GLIBC_2.2.5 (pthread_create.c:537)
      ==11547==    by 0xA3FBAF: spawn_thread_v1 (pfs.cc:1910)
      ==11547==    by 0xA95761: inline_mysql_thread_create (mysql_thread.h:1255)
      ==11547==    by 0xA95FCB: ma_checkpoint_init (ma_checkpoint.c:337)
      ==11547==    by 0xA6C332: ha_maria_init(void*) (ha_maria.cc:3606)
      ==11547==    by 0x85F7A6: ha_initialize_handlerton(st_plugin_int*) (handler.cc:501)
      ==11547==    by 0x66A60C: plugin_initialize(st_mem_root*, st_plugin_int*, int*, char**, bool) (sql_plugin.cc:1379)
      ==11547==    by 0x66AEE4: plugin_init(int*, char**, int) (sql_plugin.cc:1601)
      ==11547==    by 0x58FA56: init_server_components() (mysqld.cc:4842)
      ==11547==    by 0x590B0B: mysqld_main(int, char**) (mysqld.cc:5437)
      ==11547==    by 0x586B75: main (main.cc:25)
      

      Attachments

        Activity

          People

            svoj Sergey Vojtovich
            svoj Sergey Vojtovich
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.